# complex-word-finder

./: README.md  exemplo.txt  pyproject.toml
complex_word_finder/: __init__.py  analyzer.py  cli.py  models.py  output_handler.py  synonym_finder.py  text_processor.py  word_analyzer.py
